# pyfuncscribe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  example_report.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml
src/pyfuncscribe/: __init__.py  cli.py  extractor.py  reporter.py
tests/: README.md  TEST_INVENTORY.md  __init__.py  conftest.py  test_cli.py  test_extractor.py  test_reporter.py
