[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfuncscribe"
version = "1.0.0"
description = "A CLI tool to generate comprehensive markdown reports of Python functions in a codebase"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PyFuncScribe Contributors"}
]
keywords = ["documentation", "python", "functions", "markdown", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
pyfuncscribe = "pyfuncscribe.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/pyfuncscribe"
Repository = "https://github.com/yourusername/pyfuncscribe"

[tool.setuptools.packages.find]
where = ["src"]
