[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfuncscribe"
version = "0.1.0"
description = "A CLI tool to generate comprehensive markdown reports of Python functions in a codebase"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.39.0",
]
license = {text = "MIT"}
authors = [
    {name = "PyFuncScribe Contributors"}
]
keywords = ["documentation", "python", "functions", "markdown", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
pyfuncscribe = "pyfuncscribe.cli:main"

[project.urls]
Homepage = "https://github.com/hragbalian/pyfuncscribe"
Repository = "https://github.com/hragbalian/pyfuncscribe"

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/pyfuncscribe/__init__.py:__version__"]
build_command = "pip install build && python -m build"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []
